Merged in background-invocationLogger (pull request #21)
Background invocationLogger

* Support inner and anonymous classes

* Not quite yet!

* Add statistics to terminal output

* Use fixed sized thread pool with explicit worker

* Clean up

* Throw correct exception instance

* Remove shutdown hook

The threading model for invocation logger is now using a runnable for
processing each invocation. The runnable will always fail or complete
and is executed in a non daemon thread, so we no longer have to wait
for it when the jvm halts.

* It turns out that the shutdown hook is required

* Documentation

* Fix typos

Approved-by: Isak Kristola